fix footer overlap mobile menu

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -22,12 +22,11 @@ html *,
     height: 100%;
 
     &__header {
-        z-index: 1;
+        z-index: 10;
     }
 
     &__base {
         display: flex;
-        justify-content: space-around;
         width: 100%;
     }
 
